<resources>
	<string name="app_name">DonateBlood</string>
	<string name="loading">Loading…</string>
	
	<string name="navigation_drawer_open">Open navigation drawer</string>
	<string name="navigation_drawer_close">Close navigation drawer</string>
	
	<string name="login">Login</string>
	<string name="no_internet">No Internet Connection</string>
	<string name="connected">Connected to Network</string>
	<string name="hint_mobile_number">Mobile Number</string>
	<string name="verify">Verify</string>
	
	
	<string name="settings">Settings</string>
	<string name="please_wait">Please Wait…</string>
	<string name="continue_with_email">Continue with Email ID</string>
	<string name="error_signin">Error while signing in</string>
	<string name="try_again">Try Again</string>
	<string name="cancel">Cancel</string>
	<string name="submit">Submit</string>
	<string name="ok">OK</string>
	<string name="retry">Retry</string>
	<string name="reg_fname_hint">Firstname</string>
	<string name="reg_lname_hint">Lastname</string>
	<string name="reg_uname_hint">Username</string>
	<string name="reg_dob_hint">Birth Date</string>
	<string name="reg_email_hint">Email ID</string>
	<string name="reg_mobile_hint">Mobile Number</string>
	<string name="reg_postalcode_hint">Postal Code (i.e. A1B 2C3)</string>
	<string name="title_personal_details">PERSONAL DETAILS</string>
	<string name="number">Number</string>
	<string name="male">Male</string>
	<string name="other">Other</string>
	<string name="female">Female</string>
	<string name="registration">Registration</string>
	<string name="error">Error</string>
	<string name="something_wrong">Sorry! Something went wrong.</string>
	<string name="continue_with_google">Continue with Google</string>
	
	<string-array name="BloodGroup">
		<item>BloodGroup</item>
		<item>A+</item>
		<item>A-</item>
		<item>B+</item>
		<item>B-</item>
		<item>O+</item>
		<item>O-</item>
		<item>AB+</item>
		<item>AB-</item>
		<item>Rare Type</item>
	</string-array>
	
	<string name="done">Done</string>
	<string name="err_valid_name">Enter valid name !</string>
	<string name="err_valid_tel">Enter valid phone number !</string>
	<string name="err_valid_email">Enter valid email Id !</string>
	<string name="err_valid_dob">Enter valid date of birth !</string>
	<string name="reg_weight_lb_hint">Weight (lbs)</string>
	<string name="eligible_weight">I weigh more than 110 lbs.</string>
	<string name="eligible_medicine">I am npt taking prescription medications.</string>
	<string name="eligible_uk">I have not spent 3 months or more cumulatively in the United Kingdom.</string>
	<string name="eligible_baby">I have not been pregnant or had a baby in the last 6 months.</string>
	<string name="eligible_surgery">I have not had a cleaning or a filling today, or dental surgery in last 72 hours.
	</string>
	<string name="eligible_us">I have not travelled outside Canada or the continental U.S. in the last 12 months.
	</string>
	<string name="eligible_tattoo">I have not had a tattoo or piercing in the last 3 months.</string>
	<string name="eligible_age">I am over 17 years old.</string>
	<string name="title_check_eligibility">Check Eligibility</string>
	<string name="err_not_eligible">You are not eligible for donation</string>
	<string name="err_select_spinner">Please select</string>
	<string name="book_appointment">Book Appointment</string>
	<string name="map_view">Map View</string>
	<string name="about_us">About Us</string>
	<string name="title_activity_maps">Map</string>
	<string name="logout">Logout</string>
	<string name="reg_donor_num_hint">Donor Number (If you have one)</string>
	<string name="title_reg_id">ID:</string>
	<string name="hospital_name">Hospital Name</string>
	<string name="blood_group">Blood Group</string>
	<string name="hospital_address">Hospital Address</string>
	<string name="expire_in">Expire in:</string>
	
	
	<string name="default_notification_channel_id">broadcast</string>
	<string name="donors_nearby">Donors Nearby</string>
	<string name="donation_centers_nearby">Donation Centers Nearby</string>
	<string name="donation_requests">Donation Requests</string>
	<string name="donation_centers">Donation Centers</string>
	<string name="edit">Edit</string>
	
	
	<string name="just_now">Right now</string>
	<string name="a_min_ago">1 minute ago</string>
	<string name="mins_ago">" minutes ago"</string>
	<string name="a_hour_ago">1 hour ago</string>
	<string name="yesterday">Yesterday</string>
	<string name="days_ago">" days ago"</string>
	<string name="week_ago">" week ago"</string>
	<string name="weeks_ago">" weeks ago"</string>
	<string name="centennial_college">Centennial College</string>
	<string name="shubh_email">spate753@my.centennialcollege.ca</string>
	<string name="developed_by">DEVELOPED BY</string>
	<string name="forum_email">forum@gmail.com</string>
	<string name="diego_email">diego@gmail.com</string>
	
	
	<string name="large_text">
		"Material is the metaphor.\n\n"
		
		"A material metaphor is the unifying theory of a rationalized space and a system of motion."
		"The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
		"technologically advanced and open to imagination and magic.\n"
		"Surfaces and edges of the material provide visual cues that are grounded in reality. The "
		"use of familiar tactile attributes helps users quickly understand affordances. Yet the "
		"flexibility of the material creates new affordances that supercede those in the physical "
		"world, without breaking the rules of physics.\n"
		"The fundamentals of light, surface, and movement are key to conveying how objects move, "
		"interact, and exist in space and in relation to each other. Realistic lighting shows "
		"seams, divides space, and indicates moving parts.\n\n"
		
		"Bold, graphic, intentional.\n\n"
		
		"The foundational elements of print based design typography, grids, space, scale, color, "
		"and use of imagery guide visual treatments. These elements do far more than please the "
		"eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
		"imagery, large scale typography, and intentional white space create a bold and graphic "
		"interface that immerse the user in the experience.\n"
		"An emphasis on user actions makes core functionality immediately apparent and provides "
		"waypoints for the user.\n\n"
		
		"Motion provides meaning.\n\n"
		
		"Motion respects and reinforces the user as the prime mover. Primary user actions are "
		"inflection points that initiate motion, transforming the whole design.\n"
		"All action takes place in a single environment. Objects are presented to the user without "
		"breaking the continuity of experience even as they transform and reorganize.\n"
		"Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
		"Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"
		
		"3D world.\n\n"
		
		"The material environment is a 3D space, which means all objects have x, y, and z "
		"dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
		"positive z-axis extending towards the viewer. Every sheet of material occupies a single "
		"position along the z-axis and has a standard 1dp thickness.\n"
		"On the web, the z-axis is used for layering and not for perspective. The 3D world is "
		"emulated by manipulating the y-axis.\n\n"
		
		"Light and shadow.\n\n"
		
		"Within the material environment, virtual lights illuminate the scene. Key lights create "
		"directional shadows, while ambient light creates soft shadows from all angles.\n"
		"Shadows in the material environment are cast by these two light sources. In Android "
		"development, shadows occur when light sources are blocked by sheets of material at "
		"various positions along the z-axis. On the web, shadows are depicted by manipulating the "
		"y-axis only. The following example shows the card with a height of 6dp.\n\n"
		
		"Resting elevation.\n\n"
		
		"All material objects, regardless of size, have a resting elevation, or default elevation "
		"that does not change. If an object changes elevation, it should return to its resting "
		"elevation as soon as possible.\n\n"
		
		"Component elevations.\n\n"
		
		"The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
		"does not vary from 6dp in one app to 16dp in another app).\n"
		"Components may have different resting elevations across platforms, depending on the depth "
		"of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"
		
		"Responsive elevation and dynamic elevation offsets.\n\n"
		
		"Some component types have responsive elevation, meaning they change elevation in response "
		"to user input (e.g., normal, focused, and pressed) or system events. These elevation "
		"changes are consistently implemented using dynamic elevation offsets.\n"
		"Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
		"to the component’s resting state. They ensure that elevation changes are consistent "
		"across actions and component types. For example, all components that lift on press have "
		"the same elevation change relative to their resting elevation.\n"
		"Once the input event is completed or cancelled, the component will return to its resting "
		"elevation.\n\n"
		
		"Avoiding elevation interference.\n\n"
		
		"Components with responsive elevations may encounter other components as they move between "
		"their resting elevations and dynamic elevation offsets. Because material cannot pass "
		"through other material, components avoid interfering with one another any number of ways, "
		"whether on a per component basis or using the entire app layout.\n"
		"On a component level, components can move or be removed before they cause interference. "
		"For example, a floating action button (FAB) can disappear or move off screen before a "
		"user picks up a card, or it can move if a snackbar appears.\n"
		"On the layout level, design your app layout to minimize opportunities for interference. "
		"For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
		"when a user tries to pick up one of cards.\n\n"
	</string>
	<string name="privacy_policy">Privacy Policy</string>

</resources>
